# CompMath

lab1/src/: alg_eq.rs  formating.rs  main.rs
lab2/: Cargo.toml
lab2/src/: input.rs  main.rs  methods.rs  solutions.rs
lab2/src/input/: env_args.rs  functions.rs
lab2/src/solutions/: condition.rs  function.rs
lab3/: Cargo.toml
lab3/src/: input.rs  main.rs  solutions.rs
lab3/src/input/: functions.rs
lab3/src/solutions/: function.rs  integral.rs
lab4/: Cargo.toml
lab4/src/: graph.rs  input.rs  main.rs  methods.rs
lab4/src/input/: functions.rs
lab5/: Cargo.toml
lab5/src/: input.rs  main.rs  methods.rs
lab6/: Cargo.toml
lab6/src/: func.rs  graph.rs  input.rs  main.rs  methods.rs  runge_rule.rs
lab6/src/input/: functions.rs
