[package]
name = "lab2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.5"
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }

mathru = "0.15.3"
err-derive = "0.3.1"